# ElVis-2

./: CMakeLists.txt  README.md
include/: ElVis.hpp  linear.hpp  utils.hpp
res/readme/: heapsort.webm
src/: ElVis.cpp  linear.cpp  main.cpp
